# ai_sandbox

./: .dockerignore  Dockerfile  README.md  mise.toml  pyproject.toml
.github/workflows/: build.yml  ci.yml
ai_sandbox/: __init__.py  __main__.py  cli.py
tests/: test_dockerfile.py  test_pyproject.py  test_run_container.py
