[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-sandbox"
version = "0.1.0"
description = "Dockerized environment for running agents with full permissions."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "gharper", email = "geromyh@gmail.com"}]
urls = {Repository = "https://github.com/gharper/ai_sandbox", Issues = "https://github.com/gharper/ai_sandbox/issues"}

[project.optional-dependencies]
dev = ["ruff"]
build = ["build"]

[project.scripts]
ai_sandbox = "ai_sandbox.cli:main"

[tool.setuptools.packages.find]
include = ["ai_sandbox"]
